syntax = "proto3";

package com.road.yishi.proto.active;

message MonthCardRsp {
  repeated int32 info = 1;
}
