syntax = "proto3";

package com.road.yishi.proto.consortia;

message ConsortiaInfoMsg {
  int32 consortiaId = 1;
  int32 creatorId = 2;
  int32 chairmanId = 3;
  int32 levels = 4;
  int32 addCount = 5;
  int32 currentCount = 6;
  int32 kickCount = 7;
  int32 shopLevel = 8;
  int32 storeLevel = 9;
  int32 altarLevel = 10;
  int32 schoolLevel = 11;
  int32 attackLevel = 12;
  int32 defenceLevel = 13;
  int32 agilityLevel = 14;
  int32 abilityLevel = 15;
  int32 captainLevel = 16;
  int32 goldLevel = 17;
  int32 fightPower = 18;
  int32 ownWildlands = 19;
  int32 offer = 20;
  int32 honor = 21;
  int32 blessTempId = 22;
  int32 blessCount = 23;
  int32 codeType = 24;
  int32 totalOffer = 25;
  int32 op = 26;
  string placard = 27;
  string description = 28;
  string consortiaName = 29;
  string creatorName = 30;
  string chairmanName = 31;
  string renames = 32;
  string quitResult = 33;
  bool openApp = 34;
  bool isExist = 35;
  string createDate = 36;
  string kickDate = 37;
  string deductDate = 38;
  string warnDate = 39;
  string quitDate = 40;
  string codeBeginDate = 41;
  string currentDate = 42;
  int32 codeNeedDate = 43;
  string orderInfo = 44;
  int32 physiqueLevel = 45;
  bool isRobot = 46;
  repeated int32 site = 47;
  int32 speakTimes = 48;
  string votingDate = 49;
  int32 votingStatic = 50;
  int32 votingId = 51;
  int32 activeData = 52;
  string groupPlacard = 53;
  string altarDate = 54;
  int32 altarState = 55;
  int32 maxMave = 56;
  int32 newPowerLv = 57;
  int32 newAgilityLv = 58;
  int32 newIntellectLv = 59;
  int32 newPhysiqueLv = 60;
  int32 famGpLv = 61;
  int32 medalLv = 62;
  int32 honorLv = 63;
  int32 scoreLv = 64;
  string bossInfo = 65;
  int32 materials = 66;
  int32 TotalMaterials = 67;
  repeated int32 hiSkillList = 68;
}
