syntax = "proto3";

package com.road.yishi.proto.player;

message RewardCountUpdateRepMsg {
  int32 rewardCount = 1;
}
